--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
    "name": "nextgram",
    "version": "0.1.0",
    "private": true,
+   "type": "module",
    "scripts": {
       "dev": "next dev --turbopack",
       "build": "next build",
@@ -12,16 +13,26 @@
       "prisma:seed": "prisma db seed",
       "postinstall": "prisma generate"
    },
+   "prisma": {
+      "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.js"
+   },
    "dependencies": {
       "@prisma/client": "^6.1.0",
+      "@radix-ui/react-avatar": "^1.1.2",
+      "@radix-ui/react-popover": "^1.1.4",
+      "@radix-ui/react-scroll-area": "^1.2.2",
       "@radix-ui/react-slot": "^1.1.1",
+      "axios": "^1.7.9",
       "class-variance-authority": "^0.7.1",
       "clsx": "^2.1.1",
+      "date-fns": "^3.6.0",
       "lucide": "^0.469.0",
       "lucide-react": "^0.469.0",
       "next": "15.1.2",
       "react": "^19.0.0",
+      "react-day-picker": "^8.10.1",
       "react-dom": "^19.0.0",
+      "react-resizable-panels": "^2.1.7",
       "react-use": "^17.6.0",
       "shadcn": "^2.1.8",
       "tailwind-merge": "^2.6.0",
@@ -30,7 +41,7 @@
    },
    "devDependencies": {
       "@eslint/eslintrc": "^3",
-      "@types/node": "^20",
+      "@types/node": "^20.17.10",
       "@types/react": "^19",
       "@types/react-dom": "^19",
       "autoprefixer": "^10.4.20",
@@ -44,6 +55,7 @@
       "prettier-plugin-tailwindcss": "^0.6.9",
       "prisma": "^6.1.0",
       "tailwindcss": "^3.4.17",
-      "typescript": "^5"
+      "ts-node": "^10.9.2",
+      "typescript": "^5.7.2"
    }
 }
