--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
    "private": true,
    "type": "module",
    "scripts": {
-      "dev": "next dev --turbopack",
+      "dev": "next dev",
       "build": "next build",
       "start": "next start",
       "lint": "next lint",
@@ -17,30 +17,39 @@
       "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.js"
    },
    "dependencies": {
+      "@hookform/resolvers": "^3.9.1",
       "@prisma/client": "^6.1.0",
       "@radix-ui/react-avatar": "^1.1.2",
+      "@radix-ui/react-dropdown-menu": "^2.1.4",
       "@radix-ui/react-popover": "^1.1.4",
       "@radix-ui/react-scroll-area": "^1.2.2",
       "@radix-ui/react-slot": "^1.1.1",
+      "@radix-ui/react-switch": "^1.1.2",
       "axios": "^1.7.9",
+      "bcrypt": "^5.1.1",
       "class-variance-authority": "^0.7.1",
       "clsx": "^2.1.1",
       "date-fns": "^3.6.0",
       "lucide": "^0.469.0",
       "lucide-react": "^0.469.0",
       "next": "15.1.2",
+      "next-auth": "^4.24.11",
       "react": "^19.0.0",
       "react-day-picker": "^8.10.1",
       "react-dom": "^19.0.0",
+      "react-hook-form": "^7.54.2",
       "react-resizable-panels": "^2.1.7",
       "react-use": "^17.6.0",
       "shadcn": "^2.1.8",
+      "socket.io-client": "^4.8.1",
       "tailwind-merge": "^2.6.0",
       "tailwindcss-animate": "^1.0.7",
+      "zod": "^3.24.1",
       "zustand": "^5.0.2"
    },
    "devDependencies": {
       "@eslint/eslintrc": "^3",
+      "@types/bcrypt": "^5.0.2",
       "@types/node": "^20.17.10",
       "@types/react": "^19",
       "@types/react-dom": "^19",
